fluxcd/apps/overlays/production/draw.io/service-draw-io-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: draw-io
  labels:
    policy.prplanit.com/ingress: "true"
