fluxcd/apps/overlays/production/draw.io/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: draw-io
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Tools & Utilities (Tingle Tuner🔧)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - draw.pcfae.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: draw-io
          port: 4549
